# bike-investment-study

./: .gitignore  README.md  pyproject.toml  requirements.txt
old/: pyproject.toml
old/src/: analyze_language_change.ipynb  analyze_language_change.py
src/: analyze_language.ipynb  analyze_language_change.ipynb  analyze_language_change.py  harvest_papers.py
src/analysis/: analyze_language_change.ipynb  counts.py  data_io.py  forecast.py  lexicon.py  models.py  plots.py
